Updated Project Link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.udacity.com/course/full-stack-web-developer-nanodegree--nd004" target="_blank">
+            <a href="https://github.com/jjp601/neighborhood-map-project" target="_blank">
               <img src="img/neighborhood_map.png" alt="Neighborhood Map Project">
               <p>Neighborhood Map</p>
             </a>
