Updated Linux Server Project

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.udacity.com/course/full-stack-web-developer-nanodegree--nd004" target="_blank">
+            <a href="https://github.com/jjp601/Linux-Server-Configuration" target="_blank">
               <img src="img/linux_server_config.png" alt="Linux Server Configuration Project">
               <p>Linux Server Configuration</p>
             </a>
