Update Interactive Resume Project

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.udacity.com/course/full-stack-web-developer-nanodegree--nd004" target="_blank">
+            <a href="https://github.com/jjp601/interactive-resume" target="_blank">
               <img src="img/resume_review.png" alt=" Interactive Resume Project">
               <p>Interactive Resume</p>
             </a>
@@ -66,7 +66,7 @@
         </ul>
       </section>
       <footer>
-        <a href="https://www.linkedin.com/in/jon-powell-a861144b" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/jonjpowell" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
         <a href="https://github.com/jjp601" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
         <p>&copy; 2017 Jon Powell.</p>
       </footer>
