--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
       <section id="primary">
         <h3>General Information</h3>
         <p>I am currently looking for opportunities as a Full-Stack Developer. If you have any questions, please don't hesitate to contact me!</p>
-        <p>Please use phone or email to contact me.</p>
+        <p>Please use the phone number or email provided to contact me.</p>
       </section>
       <section id="secondary">
         <h3>Contact Details</h3>
@@ -37,7 +37,7 @@
         </ul>
       </section>
       <footer>
-        <a href="https://www.linkedin.com/in/jon-powell-a861144b" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/jonjpowell" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
         <a href="https://github.com/jjp601" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
         <p>&copy; 2017 Jon Powell.</p>
       </footer>
