--- a/index.html
+++ b/index.html
@@ -28,8 +28,38 @@
       <section class="featured">
         <ul id="gallery">
           <li>
+            <a href="https://nattypark.herokuapp.com/" target="_blank">
+              <img src="img/natty_park-min.png" alt=" NattyPark Project">
+              <p>NattyPark</p>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/jjp601/scoreboard-project" target="_blank">
+              <img src="img/scoreboard.png" alt=" Scoreboard Project">
+              <p>Scoreboard</p>
+            </a>
+          </li>
+          <li>
+            <a href="http://18.217.35.245/" target="_blank">
+              <img src="img/catalog.png" alt="Car Catalog Project">
+              <p>Car Catalog</p>
+            </a>
+          </li>
+          <li>
+            <a href="https://jjp601.github.io/neighborhood-map-project/" target="_blank">
+              <img src="img/neighborhood.png" alt="Neighborhood Map Project">
+              <p>Neighborhood Map</p>
+            </a>
+          </li>
+          <li>
+              <a href="https://github.com/jjp601/Color-Guessing-Game" target="_blank">
+                <img src="img/RGB_game.png" alt=" Color Game Project">
+                <p>Color Game</p>
+              </a>
+          </li>
+          <li>
             <a href="https://github.com/jjp601/projects/tree/master/movie_trailer_proj" target="_blank">
-              <img src="img/movie_trailer_website.png" alt="Movie Trailer Website">
+              <img src="img/movie_trailer.png" alt="Movie Trailer Website">
               <p>Movie Trailer Website</p>
             </a>
           </li>
@@ -37,18 +67,6 @@
             <a href="https://github.com/jjp601/Logs_analysis_project" target="_blank">
               <img src="img/log_analysis.png" alt="Log Analysis Project">
               <p>Logs Analysis</p>
-            </a>
-          </li>
-          <li>
-            <a href="http://18.217.35.245/" target="_blank">
-              <img src="img/item_catalog.png" alt="Car Catalog Project">
-              <p>Car Catalog</p>
-            </a>
-          </li>
-          <li>
-            <a href="https://jjp601.github.io/neighborhood-map-project/" target="_blank">
-              <img src="img/neighborhood_map.png" alt="Neighborhood Map Project">
-              <p>Neighborhood Map</p>
             </a>
           </li>
           <li>
@@ -69,7 +87,7 @@
         <a href="https://www.linkedin.com/in/jonjpowell" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
         <a href="https://github.com/jjp601" target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
         <a href="https://calendly.com/jaypowell" target="_blank"><i class="fa fa-calendar fa-3x" aria-hidden="true"></i></a>
-        <p>&copy; 2017 Jon Powell.</p>
+        <p>&copy; 2018 Jon Powell.</p>
       </footer>
     </div>
   </body>
